# PEX

./: .gitignore  CHANGELOG.md  INSTALL.md  MVP_SUMMARY.md  README.md  main.py  pyproject.toml  sql_test.pi
doc/: DIA 1.docx  DIA 1.txt  DIA 3.docx  DIA 3.txt  Día 2.docx  Día 2.txt
docs/: README.md  adapters.md  architecture.md  cli.md  examples.md  structures.md  syntax.md
examples/: bad_lex.pi  bot_conversacional.pi  bot_vendedor_carros.pi  bot_vendedor_chat.py  cache_demo.pi  data.csv  data.json  data.txt  demo.pi  hello.pi  inventario_carros.json  local_llm.pi  mcp_example.pi  multiline.pi  ollama_test.pi  pex_chat.py  read_files.pi  real_db_llm.pi
examples/sales_demo/: .env.example  README.md  models.pi  pipelines.pi  project.pi  tasks.pi  tools.pi
pex/: __init__.py  __main__.py  ast_nodes.py  ast_utils.py  cache.py  cli.py  diagnostics.py  lexer.py  linter.py  parser.py  planner.py  registry.py  runtime.py
pex/adapters/: __init__.py  db.py  file.py  llm.py  mcp.py
pex_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  conftest.py  test_adapters.py  test_cache.py  test_lexer.py  test_linter.py  test_mcp.py  test_parser.py  test_planner.py  test_registry.py
tests/fixtures/invalid/: duplicate_task.pi  import_cycle_a.pi  import_cycle_b.pi  missing_import.pi  missing_ref.pi  unclosed_multiline.pi  undefined_input.pi  undefined_model.pi  undefined_tool.pi
tests/fixtures/modules/: shared.pi
tests/fixtures/valid/: agent_example.pi  hello.pi  imports_models.pi  imports_project.pi  imports_tools.pi  multiline.pi  relative_import.pi  simple_pipeline.pi  sql_sales.pi
vscode-pex/: .gitignore  README.md  extension.js  language-configuration.json  package.json  package.json.backup  package.minimal.json
vscode-pex/snippets/: pex.json
vscode-pex/syntaxes/: pex.tmLanguage.json
